tests/baselines/reference/es6ClassTest9.errors.txt
==== tests/cases/compiler/es6ClassTest9.ts (3 errors) ====
    declare class foo();
                     ~
!!! error TS1005: '{' expected.
                      ~
!!! error TS1003: Identifier expected.
    function foo() {}
             ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    